--- a/PatientRecordsModule/Views/PersonHierarchicalRecordsView.xaml
+++ b/PatientRecordsModule/Views/PersonHierarchicalRecordsView.xaml
@@ -23,6 +23,8 @@
                 </TextBlock>
 
                 <Image Grid.Row="1" Grid.Column="0" Grid.RowSpan="3" Source="pack://application:,,,/Core;component/Resources/Images/Record48x48.png" Margin="7,5,7,5" Height="36" Width="36"/>
+                <Image Grid.Row="1" Grid.Column="0" Grid.RowSpan="3" Source="pack://application:,,,/Core;component/Resources/Images/Ok48x48.png"  Margin="7,5,7,5" Height="24" Width="24" 
+                       VerticalAlignment="Bottom" HorizontalAlignment="Right" Visibility="{Binding IsCompleted, Converter={StaticResource BooleanToVisibilityConverter}}"/>
                 <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding DateTimePeriod}" Margin="0" Padding="0" FontSize="11" HorizontalAlignment="Left" VerticalAlignment="Center" FontStyle="Italic"/>
                 <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding RoomName}" Margin="0" Padding="0" FontSize="11" HorizontalAlignment="Left" VerticalAlignment="Center" FontStyle="Italic" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap">
                     <TextBlock.ToolTip>
