--- a/PatientRecordsModule/Views/PersonHierarchicalVisitsView.xaml
+++ b/PatientRecordsModule/Views/PersonHierarchicalVisitsView.xaml
@@ -27,7 +27,7 @@
                        VerticalAlignment="Bottom" HorizontalAlignment="Right" Visibility="{Binding IsCompleted, Converter={StaticResource BooleanToVisibilityConverter}}"/>
                 
                 <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding DateTimePeriod}" Margin="0" Padding="0" FontSize="11" HorizontalAlignment="Left" VerticalAlignment="Center" FontStyle="Italic"/>
-                <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding FinSource}" Margin="0,0,0,2" Padding="0" FontSize="11" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding FinSource}" FontWeight="SemiBold" Margin="0,0,5,2" Padding="0" FontSize="11" HorizontalAlignment="Right" VerticalAlignment="Center"/>
             </Grid>
         </Border>
     </HierarchicalDataTemplate>
