--- a/PatientRecordsModule/Views/RecordTypesProtocols/DefaultProtocolView.xaml
+++ b/PatientRecordsModule/Views/RecordTypesProtocols/DefaultProtocolView.xaml
@@ -11,24 +11,29 @@
     <DataTemplate DataType="{x:Type viewModels:DefaultProtocolViewModel}">
         <Grid>
             <!--Grid for edit protocol-->
-            <Grid Visibility="{Binding IsEditMode, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                </Grid.RowDefinitions>
+            <GroupBox Header="Протокол" FontWeight="Medium" Margin="2,20,2,2" BorderBrush="Black" BorderThickness="1"
+                      Visibility="{Binding IsEditMode, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}">        
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                    </Grid.RowDefinitions>
 
-                <TextBlock Grid.Row="0" Grid.Column="0" Text="Описание"/>
-                <TextBox Grid.Row="0"  Grid.Column="1" Text="{Binding Discription, UpdateSourceTrigger=PropertyChanged}"/>
-                <TextBlock  Grid.Row="1" Grid.Column="0" Text="Заключение"/>
-                <TextBox  Grid.Row="1" Grid.Column="1" Text="{Binding Result, UpdateSourceTrigger=PropertyChanged}"/>
-                <views:DiagnosesView Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" DataContext="{Binding DiagnosesEditor}" Margin="2"/>
-            </Grid>
-            <!--Grid for view protocol-->
+                    <TextBlock Grid.Row="0" Grid.Column="0" Text="Описание"/>
+                    <TextBox Grid.Row="0"  Grid.Column="1" Text="{Binding Description, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
+                             Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"/>
+                    <TextBlock  Grid.Row="1" Grid.Column="0" Text="Заключение"/>
+                    <TextBox  Grid.Row="1" Grid.Column="1" Text="{Binding Result, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
+                             Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}"/>
+                    <views:DiagnosesView Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" DataContext="{Binding DiagnosesEditor}" Margin="2"/>
+                </Grid>
+            </GroupBox>
+        <!--Grid for view protocol-->
             <Grid Visibility="{Binding IsViewMode, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
@@ -39,10 +44,10 @@
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock Grid.Row="0" Grid.Column="0" Text="Описание"/>
-                <TextBlock Grid.Row="0"  Grid.Column="1" Text="{Binding Discription}"/>
-                <TextBlock  Grid.Row="1" Grid.Column="0" Text="Заключение"/>
-                <TextBlock  Grid.Row="1" Grid.Column="1" Text="{Binding Result}"/>
+                <TextBlock Grid.Row="0" Grid.Column="0" Text="Описание:" Margin="5" FontSize="13" FontWeight="Medium"/>
+                <TextBlock Grid.Row="0"  Grid.Column="1" Text="{Binding Description}" HorizontalAlignment="Stretch"/>
+                <TextBlock  Grid.Row="1" Grid.Column="0" Text="Заключение:" Margin="5" FontSize="13" FontWeight="Medium"/>
+                <TextBlock  Grid.Row="1" Grid.Column="1" Text="{Binding Result}" HorizontalAlignment="Stretch"/>
             </Grid>
         </Grid>
     </DataTemplate>
