--- a/PatientInfoModule/Views/Info/InfoHeaderView.xaml
+++ b/PatientInfoModule/Views/Info/InfoHeaderView.xaml
@@ -6,6 +6,7 @@
                       xmlns:fluent="urn:fluent-ribbon"
                       xmlns:viewModels="clr-namespace:PatientInfoModule.ViewModels"
                       xmlns:converters="clr-namespace:PatientInfoModule.Converters"
+                      xmlns:converters1="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
                       mc:Ignorable="d"
                       d:DesignHeight="300"
                       d:DesignWidth="300"
@@ -46,19 +47,13 @@
                        Header="Добавить родственника"
                        Command="{Binding ContentViewModel.AddRelativeCommand, Mode=OneTime}"
                        LargeIcon="pack://application:,,,/Core;Component/Resources/Images/Relatives48x48.png" />
-        <fluent:InRibbonGallery MaxItemsInRow="5"
+        <fluent:InRibbonGallery MaxItemsInRow="3"
                                 ItemWidth="80"
                                 ItemsSource="{Binding ContentViewModel.Relatives}"
-                                MinWidth="250"
-                                Orientation="Horizontal">
-            <fluent:InRibbonGallery.ItemContainerStyle>
-                <Style TargetType="{x:Type fluent:GalleryItem}">
-                    <Setter Property="Command"
-                            Value="{Binding DataContext.ContentViewModel.SelectRelativeCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type fluent:InRibbonGallery}}}" />
-                    <Setter Property="CommandParameter"
-                            Value="{Binding}" />
-                </Style>
-            </fluent:InRibbonGallery.ItemContainerStyle>
+                                MinWidth="260"
+                                ItemHeight="58"
+                                Orientation="Horizontal"
+                                SelectedItem="{Binding ContentViewModel.SelectedPatientOrRelative, Mode=TwoWay}">
             <fluent:InRibbonGallery.ItemTemplate>
                 <DataTemplate DataType="{x:Type viewModels:PatientInfoViewModel}">
                     <StackPanel Orientation="Vertical">
@@ -66,15 +61,24 @@
                                 BorderThickness="1"
                                 HorizontalAlignment="Center"
                                 Background="Transparent">
-                            <Image Width="32"
-                                   Height="32">
-                                <Image.Source>
-                                    <MultiBinding Converter="{StaticResource GenderToPhotoUriConverter}">
-                                        <Binding Path="PhotoUri" />
-                                        <Binding Path="IsMale" />
-                                    </MultiBinding>
-                                </Image.Source>
-                            </Image>
+                            <Grid>
+                                <Image Width="32"
+                                       Height="32">
+                                    <Image.Source>
+                                        <MultiBinding Converter="{StaticResource GenderToPhotoUriConverter}">
+                                            <Binding Path="PhotoUri" />
+                                            <Binding Path="IsMale" />
+                                        </MultiBinding>
+                                    </Image.Source>
+                                </Image>
+                                <Image Width="8"
+                                       Height="8"
+                                       HorizontalAlignment="Right"
+                                       VerticalAlignment="Top"
+                                       Margin="0 2 2 0"
+                                       Visibility="{Binding IsRepresentative, Converter={x:Static converters1:BoolToVisibilityConverter.Instance}}"
+                                       Source="pack://application:,,,/Core;Component/Resources/Images/Star16x16.png" />
+                            </Grid>
                         </Border>
                         <TextBlock Text="{Binding SelectedRelationship.Name, FallbackValue='???'}"
                                    HorizontalAlignment="Center" />
